--- a/main.css
+++ b/main.css
@@ -25,3 +25,18 @@
     text-align: center;
     color: #fff;
 }
+
+.footer {
+    position: static;
+    bottom: 0;
+    height: 30px;
+    width: 100%;
+    background-color: #888;
+    background-size: cover;
+}
+
+.contact-info {
+    text-align: right;
+    padding: 10px 0px 30px 0px;
+    z-index: 1;
+}
