--- a/main.css
+++ b/main.css
@@ -35,8 +35,13 @@
     background-size: cover;
 }
 
-.contact-info {
-    text-align: right;
-    padding: 10px 0px 30px 0px;
-    z-index: 1;
+li {
+    float: right;
+}
+
+li h1 {
+    color: black;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
 }
