--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@
 .header {
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient();
+    background-color: #888;
     background-position: center;
     background-size: cover;
     position: relative;
@@ -29,19 +29,19 @@
 .footer {
     position: static;
     bottom: 0;
-    height: 30px;
+    height: 100px;
     width: 100%;
     background-color: #888;
     background-size: cover;
 }
 
 li {
-    float: right;
+    float: left;
 }
 
 li h1 {
     color: black;
     text-align: center;
-    padding: 16px;
+    padding: 30px;
     text-decoration: none;
 }
