--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@
     font-size: 18px;
 }
 
+/* Header style */
 .header {
     min-height: 100vh;
     width: 100%;
@@ -14,6 +15,35 @@
     position: relative;
     z-index: 1;
     overflow: auto;
+}
+
+.nav-bar {
+    width: 50%;
+    float: right;
+}
+
+ul.nav-bar-list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333333;
+}
+
+ul.nav-bar-list li {
+    float: left;
+}
+
+ul.nav-bar-list li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
+}
+
+ul.nav-bar-list li a:hover {
+    background-color: #111111;
 }
 
 .text-box {
@@ -26,6 +56,7 @@
     color: #fff;
 }
 
+/* Footer style */
 .footer {
     position: static;
     bottom: 0;
