--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
+    text-decoration: none;
 }
 
 /* Header style */
@@ -17,9 +18,23 @@
     overflow: auto;
 }
 
+#myHeader {
+    width: 100%;
+    height: 30px;
+    position: fixed;
+    background: #333333;
+}
+
+#PageName {
+    width: 100px;
+    height: 30px;
+    left: 0;
+}
+
 .nav-bar {
     width: 50%;
-    float: right;
+    height: 30px;
+    right: 0;
 }
 
 ul.nav-bar-list {
@@ -46,6 +61,7 @@ ul.nav-bar-list li a:hover {
     background-color: #111111;
 }
 
+/* Main body style */
 .text-box {
     width: 90%;
     position: absolute;
@@ -64,15 +80,4 @@ ul.nav-bar-list li a:hover {
     width: 100%;
     background-color: #888;
     background-size: cover;
-}
-
-li {
-    float: left;
-}
-
-li h1 {
-    color: black;
-    text-align: center;
-    padding: 30px;
-    text-decoration: none;
 }
