--- a/main.css
+++ b/main.css
@@ -10,12 +10,10 @@
 .header {
     min-height: 100vh;
     width: 100%;
-    background-color: #888;
-    background-position: center;
-    background-size: cover;
     position: relative;
     z-index: 1;
     overflow: auto;
+    background: rgba(33, 33, 33, 0.6);
 }
 
 #myHeader {
@@ -28,14 +26,19 @@
 #PageName {
     display: block;
     left: 0;
+    background: #333333;
     color: white;
     text-align: center;
     text-decoration: none;
 }
 
+#PageName:hover {
+    background-color: #111111;
+}
+
 .nav-bar {
     width: 50%;
-    height: 30px;
+    height: 100px;
     right: 0;
 }
 
@@ -63,7 +66,7 @@ ul.nav-bar-list li a:hover {
     background-color: #111111;
 }
 
-/* Main body style */
+/* Main body style 
 .text-box {
     width: 90%;
     position: absolute;
@@ -74,7 +77,7 @@ ul.nav-bar-list li a:hover {
     color: #fff;
 }
 
-/* Footer style */
+/* Footer style 
 .footer {
     position: static;
     bottom: 0;
@@ -83,3 +86,4 @@ ul.nav-bar-list li a:hover {
     background-color: #888;
     background-size: cover;
 }
+*/
