--- a/main.css
+++ b/main.css
@@ -8,7 +8,6 @@
 
 /* Header style */
 .header {
-    min-height: 100vh;
     width: 100%;
     position: relative;
     z-index: 1;
@@ -18,17 +17,25 @@
 
 #myHeader {
     width: 100%;
-    height: 30px;
+    height: 100px;
     position: fixed;
     background: #333333;
+}
+
+.logo {
+    width: 25%;
+    margin: 0;
+    padding: 0;
+    background-color: #333333;
 }
 
 #PageName {
     display: block;
     left: 0;
+    padding: 16px;
     background: #333333;
     color: white;
-    text-align: center;
+    text-align: left;
     text-decoration: none;
 }
 
