--- a/main.css
+++ b/main.css
@@ -17,13 +17,12 @@
 
 #myHeader {
     width: 100%;
-    height: 100px;
     position: fixed;
     background: #333333;
 }
 
 .logo {
-    width: 25%;
+    left: 0;
     margin: 0;
     padding: 0;
     background-color: #333333;
@@ -31,11 +30,10 @@
 
 #PageName {
     display: block;
-    left: 0;
     padding: 16px;
     background: #333333;
     color: white;
-    text-align: left;
+    text-align: center;
     text-decoration: none;
 }
 
@@ -44,8 +42,6 @@
 }
 
 .nav-bar {
-    width: 50%;
-    height: 100px;
     right: 0;
 }
 
@@ -58,6 +54,7 @@ ul.nav-bar-list {
 }
 
 ul.nav-bar-list li {
+    right: 0;
     float: left;
 }
 
