--- a/main.css
+++ b/main.css
@@ -28,6 +28,8 @@ header {
 #PageName {
     display: block;
     width: max-content;
+    margin: 0;
+    padding: 16px;
     color: white;
     text-align: center;
     background-color:#333333;
@@ -58,7 +60,7 @@ header {
 }
 
 .nav-list li a {
-    display: block;
+    display: inline-block;
     color: white;
     text-align: center;
     padding: 16px;
