--- a/main.css
+++ b/main.css
@@ -99,13 +99,17 @@ footer {
     padding: 16px;
 }
 
-.contact-list li h1, .contact-list li a {
+.contact-list li h1 {
     text-align: center;
     color: white;
+    padding: 16px
 }
 
 .contact-list li a {
+    text-align: center;
+    color: rgba(255, 255, 255, 1);
     font-size: 12px;
+    padding: 16px;
 }
 
 /* Social media */
@@ -125,6 +129,5 @@ footer {
 .socials li a {
     display: inline-block;
     text-align: center;
-    padding: 16px;
     text-decoration: none;
 }
