--- a/main.css
+++ b/main.css
@@ -69,6 +69,20 @@ header {
     background-color: #111111;
 }
 
+/* Main content CSS */
+.main-container {
+    width: 100%;
+    position: static;
+    overflow: hidden;
+    background: #555555;
+}
+
+section {
+    width: 100%;
+    height: 33%;
+    overflow: hidden;
+}
+
 /* Footer CSS */
 footer {
     width: 100%;
@@ -81,6 +95,7 @@ footer {
 /* Contact info style */
 .contact-info {
     float: right;
+    margin-bottom: 100px;
 }
 
 .contact-list {
@@ -125,7 +140,7 @@ footer {
     margin: 0;
     padding: 0;
     white-space: nowrap;
-    float: center;
+    float: right;
 }
 
 .socials li a {
