--- a/main.css
+++ b/main.css
@@ -72,15 +72,26 @@ header {
 /* Main content CSS */
 .main-container {
     width: 100%;
-    position: static;
+    position: absolute;
     overflow: hidden;
     background: #555555;
 }
 
 section {
     width: 100%;
-    height: 33%;
+    height: 33vh;
     overflow: hidden;
+}
+
+#Intro {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.home-header-content {
+    margin: auto;
+    padding: 50vh 0;
 }
 
 /* Footer CSS */
@@ -140,10 +151,11 @@ footer {
     margin: 0;
     padding: 0;
     white-space: nowrap;
-    float: right;
+    float: center;
 }
 
 .socials li a {
+    margin: auto;
     display: inline;
     text-align: center;
     text-decoration: none;
