--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ body {
 
 #page-wrapper {
     width: 100%;
-    min-height: 100%;
+    min-height: 100vh;
     position: relative;
 }
 
@@ -89,7 +89,7 @@ header {
 }
 
 .nav-list li a:hover {
-    background-color: #0f4880;
+    background-color: #082440;
 }
 
 /* Main content CSS */
