--- a/main.css
+++ b/main.css
@@ -182,6 +182,10 @@ footer {
     padding: 16px;
 }
 
+.contact-list li a:hover {
+    text-decoration: underline;
+}
+
 /* Social media */
 .socials {
     list-style-type: none;
@@ -203,6 +207,10 @@ footer {
     display: inline;
     text-align: center;
     text-decoration: none;
+}
+
+.socials li a:hover {
+    text-decoration: underline;
 }
 
 .fa-linkedin-in {
