--- a/main.css
+++ b/main.css
@@ -17,6 +17,7 @@ body {
 #page-wrapper {
     width: 100%;
     min-height: 100vh;
+    height: max-content;
     position: relative;
 }
 
@@ -58,7 +59,7 @@ header {
 }
 
 #PageName:hover{
-    background-color: #002468;
+    background-color: #082440;
 }
 
 /* Navigation bar */
@@ -103,7 +104,7 @@ header {
 
 section {
     width: 100%;
-    height: 33vh;
+    height: 45vh;
     overflow: hidden;
 }
 
