--- a/main.css
+++ b/main.css
@@ -112,12 +112,15 @@ section {
     width: 100%;
     height: 100vh;
     overflow: hidden;
+    background: #0f4880;
+    z-index: 0;
 }
 
 .home-header-content {
     margin: auto;
     padding: 30vh 0;
     display: inline;
+    z-index: 1;
 }
 
 .intro {
