--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
     text-decoration: none;
+    box-sizing: border-box;
 }
 
 html,
@@ -100,6 +101,7 @@ header {
     position: absolute;
     overflow: hidden;
     background: #bbbbbb;
+    padding-bottom: 0;
 }
 
 section {
