--- a/main.css
+++ b/main.css
@@ -18,6 +18,7 @@ body {
 #page-wrapper {
     width: 100%;
     min-height: 100vh;
+    height: max-content;
     position: relative;
     overflow: visible;
 }
@@ -102,7 +103,7 @@ header {
     position: absolute;
     overflow: hidden;
     background: #bbbbbb;
-    padding-bottom: 60px;
+    padding-bottom: 150px;
     order: 2;
 }
 
@@ -148,7 +149,7 @@ footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 60px;
+    height: 150px;
     background: #0f4880;
     z-index: 1;
 }
