--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@ body {
 #page-wrapper {
     width: 100%;
     min-height: 100vh;
-    height: max-content;
+    height: auto;
     position: relative;
     overflow: visible;
 }
@@ -103,7 +103,8 @@ header {
     position: absolute;
     overflow: hidden;
     background: #555555;
-    padding-bottom: 150px;
+    padding-bottom: 130px;
+    float: left;
 }
 
 section {
@@ -148,9 +149,9 @@ footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 150px;
+    height: 130px;
     background: #0f4880;
-    z-index: 1;
+    float:left;
 }
 
 /* Contact info style */
