--- a/main.css
+++ b/main.css
@@ -21,6 +21,7 @@ body {
     height: auto;
     position: relative;
     overflow: visible;
+    float: left;
 }
 
 hr { 
@@ -122,7 +123,7 @@ section {
 
 .home-header-content {
     margin: auto;
-    padding: 30vh 0;
+    padding-top: 30vh;
     display: inline;
 }
 
