--- a/main.css
+++ b/main.css
@@ -5,25 +5,17 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
     text-decoration: none;
-    box-sizing: border-box;
-}
-
-html,
-body {
-    height: auto;
-    margin: 0;
-    padding: 0;
 }
 
 #page-wrapper {
     width: 100%;
+    height: fit-content;
     min-height: 100vh;
-    height: auto;
+    display: block;
+    overflow: hidden;
     position: relative;
-    overflow: visible;
-    float: left;
 }
-
+/*
 hr { 
     display: block; 
     margin-block-start: auto; 
@@ -41,7 +33,6 @@ header {
     background: #0f4880;
     opacity: 0.9;
     z-index: 1;
-    order: 1;
 }
 
 /* Website name/logo */
@@ -101,11 +92,7 @@ header {
 /* Main content CSS */
 .main-container {
     width: 100%;
-    position: absolute;
-    overflow: hidden;
-    background: #555555;
-    padding-bottom: 130px;
-    float: left;
+    background: white;
 }
 
 section {
@@ -133,26 +120,23 @@ section {
 }
 
 #text {
-    width: 60%;
+    float: left;
     text-align: center;
-    margin-right: 0;
-    padding-right: 20px;
+    margin: 0;
+    padding: 30% 0 0 10%;
 }
 
 #profile {
-    width: 40%;
-    margin-left: 0;
-    padding-left: 20px;
+    float: right;
 }
 
 /* Footer CSS */
 footer {
-    position: absolute;
-    bottom: 0;
     width: 100%;
     height: 130px;
     background: #0f4880;
-    float:left;
+    position: absolute;
+    bottom: 0;
 }
 
 /* Contact info style */
@@ -204,10 +188,9 @@ footer {
 }
 
 .socials li {
-    margin: 0;
-    padding: 0;
+    margin-top: 0;
+    padding-top: 0;
     white-space: nowrap;
-    float: center;
 }
 
 .socials li a {
@@ -217,10 +200,10 @@ footer {
     text-decoration: none;
 }
 
-.socials li a:hover {
-    text-decoration: underline;
+i {
+    size: 8px;
 }
 
-.fa-linkedin-in {
-    size: 12px;
+i:hover {
+    text-decoration: underline;
 }
