--- a/main.css
+++ b/main.css
@@ -93,6 +93,7 @@ header {
 .main-container {
     width: 100%;
     background: white;
+    padding-bottom: 13vh;
 }
 
 section {
@@ -109,23 +110,27 @@ section {
 }
 
 .home-header-content {
-    margin: auto;
-    padding-top: 30vh;
+    width: 80vw;
+    padding-left: 10vw;
+    padding-right: 10vw;
+    max-height: 50vh;
     display: inline;
+    position: absolute;
+    top: 45vh;
+    transform: translate(0,-50%);
+    overflow: hidden;
 }
 
 .intro {
+    width: 50%;
     float: left;
-    margin: auto;
 }
 
 #text {
     float: left;
     text-align: center;
-    margin: 0;
-    padding: 30% 0 0 10%;
 }
-
+/*
 #profile {
     float: right;
 }
@@ -133,7 +138,8 @@ section {
 /* Footer CSS */
 footer {
     width: 100%;
-    height: 130px;
+    min-height: 120px;
+    height: 13vh;
     background: #0f4880;
     position: absolute;
     bottom: 0;
