--- a/main.css
+++ b/main.css
@@ -109,7 +109,7 @@ section {
     background: #082440;
 }
 
-.home-header-content {
+.header-content {
     width: 1200px;
     height: 300px;
     margin: auto;
@@ -124,7 +124,7 @@ section {
     width: 800px;
     height: 300px;
     text-align: center;
-    padding-right: 50px;
+    padding-right: 100px;
     margin-right: 0;
     float:left;
 }
