--- a/education.css
+++ b/education.css
@@ -1,3 +1,11 @@
 #title-container{
     height: 50vh;
 }
+
+#education-text {
+    position: relative;
+    width: 800px;
+    height: 300px;
+    text-align: center;
+    margin: auto;
+}
