--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
     text-decoration: none;
+    color: #dddddd;
 }
 
 html, body {
@@ -100,7 +101,7 @@ header {
 }
 
 .main-content {
-    width: 80vw;
+    width: 90vw;
     margin: auto;
     background: #333333;
 }
