--- a/education.css
+++ b/education.css
@@ -15,17 +15,45 @@
 }
 
 .main-content {
+    width: 75vw;
     display: flex;
+    margin-bottom: 100px;
+    padding-bottom: 100px;
+}
+
+.main-content h1 {
+    padding-top: 50px;
 }
 
 .left-content {
-    padding: 0 20px;
-    width: 40%;
+    padding: 0 30px;
+    width: 60%;
     background: #333333;
 }
 
 .right-content {
     flex-grow: 1;
+}
+
+.right-content div {
+    padding-right: 50px;
+}
+
+.right-content h1 {
+    padding: 15px 0;
+}
+
+.right-content p {
+    padding: 15px 0;
+}
+
+.right-content h2 {
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+.right-content li {
+    list-style-position: inside;
+    padding: 10px 20px;
 }
 
 a.learn-more {
