finished contact page visual

--- a/contact.css
+++ b/contact.css
@@ -39,6 +39,12 @@
 form {
     width: 80%;
     margin: auto;
+    padding-top: 20px;
+    padding-bottom: 50px;
+}
+
+label {
+    color: #555555;
 }
 /* Style inputs */
 input[type=text], select, textarea {
@@ -48,10 +54,11 @@ input[type=text], select, textarea {
     margin-top: 6px;
     margin-bottom: 16px;
     resize: vertical;
+    color: #666666;
 }
 
 input[type=submit] {
-    background-color: #04AA6D;
+    background-color: #1c87c9;
     color: white;
     padding: 12px 20px;
     border: none;
@@ -59,5 +66,5 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #144365;
 }
